# AD-interfaces

./: README.md
ad-interfaces/: CMakeLists.txt  Makefile  readme.md
ad-interfaces/include/perception/: BoxCoordinate.hpp  CameraDetectorInterface.hpp  DetectedBox.hpp  PerceptionInterface.hpp
ad-interfaces_py/: __init__.py  perception.py
my_project/: CMakeLists.txt  Makefile
my_project/include/: DummyPerceptor.hpp
my_project/src/: main.cpp
